--- a/pages/competitions/grand.yml
+++ b/pages/competitions/grand.yml
@@ -1,17 +1,17 @@
 competition.info: +
 competition.navigation: +
 competition.register: user
-competition.settings: organizers
+competition.settings: organizer
 competition.registrations: +
-competition.scorecards_rounds: organizers
-competition.scorecards_round_print: organizers
-competition.scrambles_rounds: organizers
-competition.scrambles_round_generate: organizers
-competition.scrambles_round_generate_tnoodle: organizers
-competition.scrambles_round_print: organizers
+competition.scorecards_rounds: organizer
+competition.scorecards_round_print: organizer
+competition.scrambles_rounds: organizer
+competition.scrambles_round_generate: organizer
+competition.scrambles_round_generate_tnoodle: organizer
+competition.scrambles_round_print: organizer
 competition.results_rounds: +
 competition.results_round: +
-competition.results_enter: organizers
+competition.results_enter: organizer
 competition.results_print: +
 competition.status: organizer
 competition.title: +
