--- a/.config/templates.yml
+++ b/.config/templates.yml
@@ -75,7 +75,7 @@ competition:
         announcement_approval__announced: Approve the competition announcement
         announced__announcement_approval: Take a step back
         announced__running: Start the competition
-        running__results_approval: Send the competition results for approval
+        running__results_approval: Send the competition results for approval (see Regulation 4e)
         running__announced: Take a step back
         results_approval__running: Take a step back
         results_approval__completed: Approve the competition results
