kilo: flip executed as x2

--- a/.config/extra_events.yml
+++ b/.config/extra_events.yml
@@ -226,6 +226,8 @@ kilo:
     scramble: generate_kilo
     scramble_training: generate_kilo_training
     drawing: drawing_kilo
+    comments:
+        - flip executed as x2
     
 444pyra:
     name: Master Pyraminx 
