Event filter on competitions page

--- a/.config/templates.yml
+++ b/.config/templates.yml
@@ -46,6 +46,8 @@ aouth:
     logout: Sign out
     logout_all: Sign out from all devices
 competition:
+    event_filter:
+        all_events: All events
     statuses_extended:
         draft: |
             Waiting for Extra Events Organizer
