--- a/pages/competitions/grand.yml
+++ b/pages/competitions/grand.yml
@@ -14,7 +14,7 @@ competition.scrambles_round_print: organizer
 competition.results_rounds: +
 competition.results_round: +
 competition.results_round_enter: organizer
-competition.results_print: +
+competition.results_round_print: +
 competition.status: organizer
 competition.title: +
 competition.create: member
