--- a/.config/templates.yml
+++ b/.config/templates.yml
@@ -70,22 +70,43 @@ competition:
             Extra Events Leaders canceled the results of the competition.
             For more information, contact the Extra Events Organizer.
     actions:
-        draft__delete: Delete the competition
-        draft__draft: Update the competition information from WCA
-        draft__announcement_approval: Send the competition announcement for approval
-        draft__announcement_approval__details: see Regulation 4d
-        announcement_approval__draft: Take a step back
-        announcement_approval__announced: Approve the competition announcement
-        announced__announcement_approval: Take a step back
-        announced__running: Start the competition
-        running__results_approval: Send the competition results for approval
-        running__results_approval__details: see Regulation 4e
-        running__announced: Take a step back
-        results_approval__running: Take a step back
-        results_approval__completed: Approve the competition results
-        results_approval__results_canceled: Reject the competition results
-        completed__results_approval: Take a step back
-        results_canceled__results_approval: Take a step back
+        description: Comment on changing status
+        log:
+            timestamp: Timestamp
+            status_old: Old status
+            status_new: New status
+            description: Description
+            person: Person
+        draft__delete: 
+            button: Delete the competition
+        draft__draft: 
+            button:  Update the competition information from WCA
+        draft__announcement_approval: 
+            button:  Send the competition announcement for approval
+            details: see Regulation 4d
+        announcement_approval__draft: 
+            button:  Take a step back
+        announcement_approval__announced: 
+            button:  Approve the competition announcement
+        announced__announcement_approval: 
+            button:  Take a step back
+        announced__running: 
+            button:  Start the competition
+        running__results_approval: 
+            button:  Send the competition results for approval
+            details: see Regulation 4e
+        running__announced: 
+            button:  Take a step back
+        results_approval__running: 
+            button:  Take a step back
+        results_approval__completed: 
+            button:  Approve the competition results
+        results_approval__results_canceled: 
+            button:  Reject the competition results
+        completed__results_approval: 
+            button:  Take a step back
+        results_canceled__results_approval: 
+            button:  Take a step back
     navigation:
         info: Info
         register: Register
