fixed bug limit competitors
+ minor fixes

--- a/.config/default.yml
+++ b/.config/default.yml
@@ -8,7 +8,7 @@ config:
         support: support@extraevents.org
     owner: 
         url: https://www.worldcubeassociation.org/persons/2015SOLO01
-        name: Konstantin Solovyov
+        name: Konstantin Solovev (Константин Соловьёв)
                 
 regulation:                
     deadline:
