--- a/.config/templates.yml
+++ b/.config/templates.yml
@@ -125,7 +125,8 @@ competition:
     title: Competitions with Extra Events
     mine: My competitions
     more_info: WCA website
-    more_info_nonwca: FunCubing website
+    more_info_nonwca: 
+        FC: FunCubing website
     date: Date
     name: Name
     events: Events
