--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 .DS_Store
 /.initial_export
-/.config_key
-/.files*
+/.files/backups
+/.files/scrambles
+/.files/sessions
+/.files_tmp/errors
+/.files_tmp/scramble_pdf
+/.files_public
 /.well-known
 **/external
 /vendor/
 /composer.lock
 /nbproject/
+/.config_key/extraevents.org.yml
+/.config_key/localhost.yml
