--- a/init_localhost/localhost.yml
+++ b/init_localhost/localhost.yml
@@ -9,11 +9,11 @@ smtp_host: localhost
 smtp_port: 25
 smtp_username: username
 smtp_password: password
-db_main_schema: ee_extraevents
-db_wca_schema: ee_wca
-db_export_schema: ee_export
-db_helper_schema: ee_helper
-telegram_support_chatid: ???
-telegram_token: ???
-discort_webhookurl_competition: ???
-discort_webhookurl_records: ???
+db_main_schema: l_extraevents
+db_wca_schema: l_wca
+db_export_schema: l_ee_export
+db_helper_schema: l_ee_helper
+telegram_support_chatid: *
+telegram_token: *
+discort_webhookurl_competition: *
+discort_webhookurl_records: *
