--- a/init_localhost/localhost.yml
+++ b/init_localhost/localhost.yml
@@ -2,7 +2,7 @@ db_host: localhost
 db_port: 8889
 db_username: root
 db_password: root
-wcaoauth_url_refer: http://<localhost_main_url>/persons/login
+wcaoauth_url_refer: 'http://<localhost_main_url>/persons/login'
 wcaoauth_client_id: ???
 wcaoauth_client_secret: ???
 smtp_host: localhost
